[package]
name = "bevy_fabrik_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
forte = "1.0.0-alpha.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[features]
bevy_reflect = []
