[package]
name = "bevy_fabrik_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_egui = "0.38.1"
rayon = "1.11.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[features]
bevy_reflect = []
