[package]
name = "bevy_fabrik_solver"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dougall Sinclair <Dustyquark@gmail.com>"]
description = "A Fabrik based IK Solver for the Bevy game engine"
repository = "https://github.com/Dusty844/bevy_fabrik_solver"
readme = "README.md"
keywords = ["gamedev", "animation", "graphics", "bevy"]
categories = ["game-development"]

[dependencies]
bevy = "0.18.0"
rayon = "1.11.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[features]
bevy_reflect = []
